update aek + error 3 case
