# backend/docs/swagger.json
@@ -4389,11 +4389,17 @@
         "controllers.Orderonline": {
             "type": "object",
             "properties": {
+                "accountnumber": {
+                    "type": "string"
+                },
                 "addedtime": {
                     "type": "string"
                 },
                 "customerid": {
                     "type": "integer"
+                },
+                "cvv": {
+                    "type": "string"
                 },
                 "paymentchannelid": {
                     "type": "integer"
@@ -4836,8 +4842,16 @@
         "ent.Orderonline": {
             "type": "object",
             "properties": {
+                "accountnumber": {
+                    "description": "Accountnumber holds the value of the \"accountnumber\" field.",
+                    "type": "string"
+                },
                 "addedtime": {
                     "description": "Addedtime holds the value of the \"addedtime\" field.",
+                    "type": "string"
+                },
+                "cvv": {
+                    "description": "Cvv holds the value of the \"cvv\" field.",
                     "type": "string"
                 },
                 "edges": {
